docs/grammar.abnf
program     = *statement

statement   = pipeline / definition

definition  = IDENT "=" pipeline

pipeline    = [pipeline "->"] base-expr
base-expr   = (IDENT) [args] [options]
base-expr  =/ "(" [base-expr *("," base-expr) [","]] ")"

args        = "(" [value *("," value) [","]] ")"
options     = "{" [pair *("," pair) [","]] "}"

pair        = IDENT "=" value
value       = NUMBER / SYMBOL

SYMBOL      = /[A-Z][a-zA-Z0-9_']*/
IDENT       = /[a-z][a-zA-Z0-9_']*/
NUMBER      = /[+\-]?[0-9][0-9_']*(\.[0-9][0-9_']*)?([eE][+\-]?[0-9][0-9_']*)?/
